@@ -3,11 +3,11 @@ Section: science
 Priority: optional
 Maintainer: Debian GIS Project <pkg-grass-devel@lists.alioth.debian.org>
 Uploaders: Francesco Paolo Lovergine <frankie@debian.org>
-Build-depends: flex, bison,libreadline-dev | libreadline6-dev, libncurses5-dev, lesstif2-dev, debhelper (>= 7), 
+Build-depends: flex, bison, libreadline-dev | libreadline6-dev, libncurses5-dev, lesstif2-dev, debhelper (>= 7), 
  libtiff4-dev, tcl-dev (>= 8.5), tk-dev (>= 8.5), libfftw3-dev, libxmu-dev, libglu1-mesa-dev | libglu1-xorg-dev, 
  libfreetype6-dev, autoconf2.13, autotools-dev, libgdal1-dev (>= 1.5.0), libproj-dev, proj-bin, libjpeg-dev, 
  libpng12-dev, libpq-dev, unixodbc-dev, doxygen, fakeroot, libmysqlclient15-dev, graphviz, libsqlite3-dev, python-wxgtk2.8,
- libcairo2-dev, libwxgtk2.8-dev, python-dev (>= 2.5), swig
+ libcairo2-dev, libwxgtk2.8-dev, python-dev (>= 2.5)
 Standards-Version: 3.9.2
 Build-Conflicts: wx2.6-headers
 Homepage: http://grass.osgeo.org/
@@ -48,7 +48,7 @@ Description: Geographic Resources Analysis Support System documentation
 Package: grass-dev
 Section: devel
 Architecture: any
-Depends: grass (= ${binary:Version}), libproj-dev, libgdal1-dev, ${misc:Depends}
+Depends: grass (= ${binary:Version}), fakeroot, libproj-dev, libgdal1-dev, ${misc:Depends}
 Suggests: pkg-config
 Provides: grass64-dev
 Description: GRASS GIS development files
