@@ -1,3 +1,5 @@
 usr/lib/grass@VERSION@/include
 usr/lib/grass@VERSION@/include/Make
+usr/lib/grass@VERSION@/tools
+usr/lib/grass@VERSION@/tools/g.html2man
 usr/share/pkgconfig
