@@ -2,4 +2,4 @@ usr/lib/grass64
 usr/bin
 usr/share/doc/grass
 usr/share/man
-usr/share/icons
+usr/share/icons/hicolor/32x32/apps
