@@ -7,7 +7,6 @@ usr/lib/grass@VERSION@/fonts
 usr/lib/grass@VERSION@/scripts
 usr/lib/grass@VERSION@/lib
 usr/lib/grass@VERSION@/locale
-usr/share/icons/hicolor/32x32
-gui/icons/grass-48x48.png /usr/share/icons/hicolor/48x48/grass@VERSION@.png
-gui/icons/grass.desktop /usr/share/applications/grass@VERSION@.desktop
+usr/share/icons/hicolor
+usr/share/applications
 usr/bin/x-grass
