@@ -129,15 +129,13 @@ endif
 		lib/segment/html \
 		lib/vector/dglib/html \
 		rfc/html \
-		swig/html \
 		lib/g3d/latex \
 		lib/ogsf/latex \
 		lib/proj/latex \
 		lib/gmath/latex \
 		lib/segment/latex \
 		lib/vector/dglib/latex \
-		rfc/latex \
-		swig/latex
+		rfc/latex
 
 install: build
 	dh_testdir
@@ -163,18 +161,48 @@ install: build
 
 	# change section from 1 to .1grass 
 	mv debian/tmp/usr/lib/$(BASE_NAME)/man/man1/grass6.1 debian/$(BASE_NAME).1
-	for m in debian/tmp/usr/lib/$(BASE_NAME)/man/man1/*.1; do n=`basename $$m .1`; mv $$m debian/tmp/usr/lib/$(BASE_NAME)/man/man1/$$n.1grass; done
-	for m in debian/tmp/usr/lib/$(BASE_NAME)/man/man1/*.1grass; do sed -i -e 's/^.TH \(.*\) 1/.TH \1 1grass/' $$m; done
+	for m in debian/tmp/usr/lib/$(BASE_NAME)/man/man1/*.1; do \
+		n=`basename $$m .1`; mv $$m debian/tmp/usr/lib/$(BASE_NAME)/man/man1/$$n.1grass; done
+	for m in debian/tmp/usr/lib/$(BASE_NAME)/man/man1/*.1grass; do \
+		sed -i -e 's/^.TH \(.*\) 1/.TH \1 1grass/' $$m; done
 
-	# install module makefile	
-	install -m 644 include/Make/Module.make debian/$(PKG_NAME)-dev/usr/lib/$(BASE_NAME)/include/Make/Module.make
+	# install module makefile (redundant due to grass-dev.install?)
+	install -m 644 include/Make/Module.make \
+		debian/$(PKG_NAME)-dev/usr/lib/$(BASE_NAME)/include/Make/Module.make
+
+	# adjust from build-server build dir to end-user's install dir
+	sed -i -e 's+^\(GRASS_HOME[ ]*=\) .*+\1 $${INST_DIR}+' \
+		-e 's+^\(RUN_GISBASE[ ]*=\) .*+\1 $${INST_DIR}+' \
+		debian/tmp/usr/lib/$(BASE_NAME)/include/Make/Platform.make
+
+	# install helper scripts for building addon man pages
+	install -m 755 tools/mkhtml.sh \
+		debian/$(PKG_NAME)-dev/usr/lib/$(BASE_NAME)/tools/mkhtml.sh
+	install -m 755 tools/g.html2man/g.html2man \
+		debian/$(PKG_NAME)-dev/usr/lib/$(BASE_NAME)/tools/g.html2man/g.html2man
 
 	# install pkg-config file
 	install -m 644 grass.pc debian/$(PKG_NAME)-dev/usr/share/pkgconfig/$(BASE_NAME).pc
 
 	# install icon file for debian menu system
-	install -d debian/tmp/usr/share/icons debian/tmp/usr/bin
-	install -m 644 debian/grass.xpm debian/tmp/usr/share/icons/hicolor/32x32/apps/$(BASE_NAME).xpm
+	install -d debian/tmp/usr/share/icons \
+		debian/tmp/usr/share/applications \
+		debian/tmp/usr/bin
+	# is there a better way to make these exist?
+	mkdir -p debian/tmp/usr/share/icons/hicolor/32x32/apps
+	mkdir -p debian/tmp/usr/share/icons/hicolor/48x48
+	mkdir -p debian/tmp/usr/share/applications
+	install -m 644 debian/grass.xpm \
+		debian/tmp/usr/share/icons/hicolor/32x32/apps/$(BASE_NAME).xpm
+	install -m 644 gui/icons/grass-48x48.png \
+		debian/tmp/usr/share/icons/hicolor/48x48/$(BASE_NAME).png
+	install -m 644 gui/icons/grass.desktop \
+		debian/tmp/usr/share/applications/$(BASE_NAME).desktop
+	# 6.4.1 shipped with "grass65" as the Exec target
+	sed -i -e 's+/usr/share/icons/grass-48x48.png+$(BASE_NAME)+' \
+		-e 's+grass65+$(BASE_NAME)+' \
+		debian/tmp/usr/share/applications/$(BASE_NAME).desktop
+
 	# install x-grass wrapper script
 	install -m 755 debian/x-grass debian/tmp/usr/bin/x-grass
 
